fix wrong width modifier cards

--- a/style.css
+++ b/style.css
@@ -296,7 +296,7 @@ html {
   position: absolute;
   left: 0;
   display: inline-block;
-  width: 20%;
+  width: 100%;
   max-width: 71px;
   height: 94px;
   padding: 0;
